# MidtermProject

./: .coverage  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
app/: __main__.py  calculation.py  calculator.py  calculator_config.py  calculator_memento.py  calculator_repl.py  exceptions.py  history.py  input_validators.py  logger.py  operations.py
data/: calculation_history.csv
tests/: test_calculation.py  test_calculator.py  test_calculator_config.py  test_calculator_memento.py  test_calculator_repl.py  test_history.py  test_input_validators.py  test_operations.py
