[project]
name = "command_line_calculator"
version = "0.1.0"
authors = [
    { name="Your Name", email="you@example.com" },
]
description = "A professional command-line calculator."
requires-python = ">=3.9"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# Add this section to tell setuptools where to find packages
[tool.setuptools]
package-dir = {"" = "src"}